# ezpgp

./: Cargo.toml  README.md
src/: error.rs  main.rs
src/contacts/: error.rs  mod.rs
src/crypto/: error.rs  mod.rs
src/ui/: error.rs  mod.rs
