[package]
name = "ezpgp"
version = "0.1.0"
edition = "2021"
description = "A minimal, auditable PGP encryption tool for secure messaging"
license = "MIT"
repository = "https://github.com/saefstroem/ezpgp"
homepage = "https://github.com/saefstroem/ezpgp"
documentation = "https://github.com/saefstroem/ezpgp"
keywords = ["pgp", "encryption", "privacy", "security", "tui"]
categories = ["command-line-utilities", "cryptography"]
readme = "README.md"
exclude = ["ARCHITECTURE.md", "QUICKSTART.md"]

[[bin]]
name = "ezpgp"
path = "src/main.rs"

[dependencies]
sequoia-openpgp = "1.21"
crossterm = "0.28"
redb = "2.2"
zeroize = { version = "1.8", features = ["derive"] }
rpassword = "7.3"
thiserror = "2.0"
dirs = "5.0"
anyhow = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
